@@ -1,4 +1,4 @@
 <table style="width: 100%; hieght: 100%">
-    <td>{stockpanel}</td>
-    <td>{playerpanel}</td>
+    <td>{stockpanel}</td> <!--Panel for stock info-->
+    <td>{playerpanel}</td> <!--player info-->
 </table>
